--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,18 @@
 
         <div class="nav">
           
-          <!-- Your code here -->
+         <% if current_user %>
+          <ul>
+            <li><%= current_user.email %></li>
+            <li><%= link_to "Logout", logout_path, method: "delete" %></li>
+          </ul>
+          <% else %>
+            <ul>
+              <li><%= link_to "Login", 'login' %></a></li>
+              <li><%= link_to "Signup", 'signup' %></a></li>
+            </ul>
+            <% end %>
+
 
 
 
